<resources>
    <string name="app_name">ImproveU</string>

    <string name="intro_heading1">Prioritize Tasks</string>
    <string name="intro_heading2">Take Notes</string>
    <string name="intro_heading3">Manage Expenses</string>

    <string name="intro_description1">Prioritize tasks and manage time using ‘Eisenhower Matrix’</string>
    <string name="intro_description2">Organize thoughts and ideas by easy note-taking</string>
    <string name="intro_description3">Keep track of personal expenses</string>

    <string name="back_btn">BACK</string>
    <string name="next_btn">NEXT</string>
    <string name="finish_btn">FINISH</string>

    <string name="signup_text">Let‘s Get Started!</string>
    <string name="signIn_text">Welcome Back!</string>

    <string name="signup_btn">Sign Up</string>
    <string name="signIn_btn">Log In</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="newUser_text">New user? Sign Up</string>
    <string name="alreadyUser_text">Already User? Sign In</string>
    <string name="forgotPassword_text">Forgot Password?</string>
    <string name="otherMethod_text">Or connect using</string>
    <string name="google">Google</string>

    <string name="home">Home</string>
    <string name="tasks">Tasks</string>
    <string name="notes">Notes</string>
    <string name="expenses">Expenses</string>

    <string name="account">Account</string>
    <string name="communicate">Communicate</string>

    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="note_title">Title</string>
    <string name="note_content">Take a note…</string>

    <string name="add_an_item">Add an item</string>
    <string name="add">Add</string>

    <string name="urgent">URGENT</string>
    <string name="not_urgent">NOT URGENT</string>
    <string name="important">IMPORTANT</string>
    <string name="not_important">NOT IMPORTANT</string>

    <string name="to_go">to go</string>
    <string name="zero">0</string>

    <string name="task">Task…</string>
    <string name="schedule">Schedule</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="recurrence">Recurrence:</string>

    <string-array name="recurrence_array">

        <item>Do not repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>

    </string-array>

    <string name="this_month">This Month</string>
    <string name="history">History</string>
    <string name="analytics">Analytics</string>

    <string name="description">Description</string>
    <string name="amount">Amount</string>

    <string name="budget">Budget</string>
    <string name="expense">Expense</string>
    <string name="zero_decimal">0.0</string>

    <string name="total_expense">Total Expense:</string>

    <string name="set_year">Set Year</string>
    <string name="year">Year:</string>
    <string name="search">Search</string>

    <string name="no_data_available">No Data Available</string>

</resources>