<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".ExpensesActivity">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/gradient_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/thisMonthBtn"
                    android:layout_width="280dp"
                    android:layout_height="170dp"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="40dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_effect"
                        android:orientation="vertical"
                        android:padding="10dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_this_month"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/this_month"
                            android:textColor="@color/darkBlue"
                            android:textSize="38sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/historyBtn"
                    android:layout_width="280dp"
                    android:layout_height="170dp"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="40dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_effect"
                        android:orientation="vertical"
                        android:padding="15dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_history"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/history"
                            android:textColor="@color/darkBlue"
                            android:textSize="38sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/analyticsBtn"
                    android:layout_width="280dp"
                    android:layout_height="170dp"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="40dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_effect"
                        android:orientation="vertical"
                        android:padding="15dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_analytics"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/analytics"
                            android:textColor="@color/darkBlue"
                            android:textSize="38sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addExpenseFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_add"
            app:maxImageSize="40dp"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>